[FEAT] 사용자/운영자 역할에 따라 조회 기능 분리 및 삭제 기능 리팩토링 - 일반 사용자는 ACTIVE 상태인 허브만 조회(단건/전체) 가능하게 하고   INACTIVE 허브는 404 반환 - 운영자는 모든 상태에 대해 조회 가능 - 단위 테스트, 통합 테스트로 각 시나리오에 대한 테스트 완료